added several function on view.js

--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
             <div class="row">
                 <div class="col-lg-6 col-sm-12" id="left_body">
                     <div class="col-12" id="playdata"></div>
-                    <div class="col-12" id="hangcat_img"></div>
-                    <div class="col-12" id="reset_btn"></div>
+                    <div class="col-12" id="img_container"></div>
+                    <div class="col-12" id="reset_btn_container"></div>
                 </div> 
             </div>
  
              <!--Right side of main body-->
             <div class="row">
                 <div class="col-lg-6 col-sm-12 right_body">
-                    <div class="col-12" id="question_container"></div>
-                    <div class="col-12" id="answer_container"></div>
+                    <div class="col-12" id="hint_container"></div>
+                    <div class="col-12" id="word_container"></div>
                     <div class="col-12" id="letters_container"></div>
                     <div class="col-12" id="save_btn_container"></div>
                 </div>
