--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!--App Name & Navigation-->
         <div class="row">
             <div class="col-lg-3 app_name"></div>
-            <div class="navbar"></div>
+            <div id="navbar"></div>
         </div>
 
         <!--Main body of the app-->
