--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 <!--Custom CSS-->
-
+<link rel="stylesheet" href="style.css">
 
 <!--Google font-->
 <link href="https://fonts.googleapis.com/css?family=Mali" rel="stylesheet">
@@ -22,7 +22,7 @@
         
         <!--App Name & Navigation-->
         <div class="row">
-            <div class="col-lg-3 app_name"></div>
+            <div class="col-lg-3" id="app_name"></div>
             <div id="navbar"></div>
         </div>
 
@@ -37,10 +37,8 @@
                     <div class="col-12" id="img_container"></div>
                     <div class="col-12" id="reset_btn_container"></div>
                 </div> 
-            </div>
- 
-             <!--Right side of main body-->
-            <div class="row">
+
+                <!--Right side of main body-->
                 <div class="col-lg-6 col-sm-12 right_body">
                     <div class="col-12" id="hint_container"></div>
                     <div class="col-12" id="word_container"></div>
