modified styling, implemented rank.html

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         
         <!--App Name & Navigation-->
         <div class="row">
-            <div class="col-lg-3" id="app_name"></div>
-            <div id="navbar"></div>
+            <div class="col-lg-6" id="appName_container"></div>
+            <div class="col-lg-6" id="navbar"></div>
         </div>
 
         <!--Main body of the app-->
