finished styling of index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
                 <div class="col-lg-6 col-sm-12" id="left_body">
                     <div class="col-12" id="playdata"></div>
                     <div class="col-12" id="img_container"></div>
-                    <div class="col-12" id="reset_btn_container"></div>
                 </div> 
 
                 <!--Right side of main body-->
@@ -43,7 +42,7 @@
                     <div class="col-12" id="hint_container"></div>
                     <div class="col-12" id="word_container"></div>
                     <div class="col-12" id="letters_container"></div>
-                    <div class="col-12" id="save_btn_container"></div>
+                    <div class="col-12" id="buttons_container"></div>
                 </div>
             </div>
 
