implemented signup modal

--- a/index.html
+++ b/index.html
@@ -46,6 +46,27 @@
                 </div>
             </div>
 
+            <!-- Modal Windows-->
+            <!--Sign up-->
+            <div class="modal fade" id="signup_modal" role="dialog">
+                <div class="modal-dialog" id="signup_body"></div>
+            </div>
+
+            <!--Login-->
+            <div class="modal fade" id="login_modal" role="dialog">
+                <div class="modal-dialog" id="login_body"></div>
+            </div>
+            
+            <!--Game Over-->
+            <div class="modal fade" id="gameover_modal" role="dialog">
+                <div class="modal-dialog" id="gameover_body"></div>
+            </div>
+            
+            <!--Confirmation of resetting score-->
+            <div class="modal fade" id="reset_modal" role="dialog">
+                <div class="modal-dialog" id="reset_body"></div>
+            </div>
+
             </div><!--main_body end-->
         </div><!--row end-->
     </div><!--container-fluid end-->
