implmented restart modal

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             </div>
             
             <!--Confirmation of resetting score-->
-            <div class="modal fade" id="reset_modal" role="dialog">
-                <div class="modal-dialog" id="reset_body"></div>
+            <div class="modal fade" id="restart_modal" role="dialog">
+                <div class="modal-dialog" id="restart_body"></div>
             </div>
 
             </div><!--main_body end-->
