fixed addNameToAccount function

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div class="row">
             <div class="col-lg-6" id="appName_container"></div>
             <div class="col-lg-6" id="navbar"></div>
+            <div class="col-lg-6" id="userNavbar"></div>
         </div>
 
         <!--Main body of the app-->
