--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 <!--Custom CSS-->
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
 
 <!--Google font-->
 <link href="https://fonts.googleapis.com/css?family=Mali" rel="stylesheet">
 
+<!--Balloon.css-->
+<link rel="stylesheet" href="css/balloon.css">
 </head>
 <body>
     <div class="container-fluid">
