--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 <!--Google font-->
 <link href="https://fonts.googleapis.com/css?family=Mali" rel="stylesheet">
 
-<!--Balloon.css-->
+<!--toastr CSS-->
+<link rel="stylesheet" href="css/toastr.css">
+
+<!--Balloon.CSS-->
 <link rel="stylesheet" href="css/balloon.css">
 </head>
 <body>
@@ -91,9 +94,9 @@
 
     <!--Scripts-->
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/jquery.balloon.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="js/toastr.js"></script>
     <script src="js/string.js"></script>
     <script src="js/model.js"></script>
     <script src="js/view.js"></script>
