implemented rank table functions

--- a/rank.html
+++ b/rank.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 <!--Custom CSS-->
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
 
 <!--Google font-->
 <link href="https://fonts.googleapis.com/css?family=Mali" rel="stylesheet">
@@ -24,16 +24,12 @@
         <div class="row">
             <div class="col-lg-6" id="appName_container"></div>
             <div class="col-lg-6" id="navbar"></div>
+            <div class="col-lg-6" id="userNavbar"></div>
         </div>
 
         <!--Main body of the app-->
         <div class="row">
             <div class="col-12 rank_body">
-                
-                <!--User's play data summary-->
-                <div class="row">
-                    <div class="col-12" id="user_summary"></div>
-                </div>
                 
                 <!--Rank Table-->
                 <div class="row">
@@ -47,6 +43,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase.js"></script>
+    <script src="js/firebase.js"></script>
     <script src="js/string.js"></script>
     <script src="js/model.js"></script>
     <script src="js/view.js"></script>
