--- a/index.html
+++ b/index.html
@@ -77,25 +77,12 @@
         </div><!--row end-->
     </div><!--container-fluid end-->
 
-    <!--Firebase-->
-    <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase.js"></script>
-    <script>
-    // Initialize Firebase
-    var config = {
-        apiKey: "AIzaSyCNK3aNeHrnqUp0EjfcuXl06s75T5p-ihg",
-        authDomain: "hangcat-game.firebaseapp.com",
-        databaseURL: "https://hangcat-game.firebaseio.com/",
-        projectId: "hangcat-game",
-        storageBucket: "hangcat-game.appspot.com",
-        messagingSenderId: "705052721360"
-    };
-    firebase.initializeApp(config);
-    </script>
-
     <!--Scripts-->
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase.js"></script>
+    <script src="js/firebase.js"></script>
     <script src="js/toastr.js"></script>
     <script src="js/string.js"></script>
     <script src="js/model.js"></script>
