added responsive settings

--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
 
         <!--Main body of the app-->
         <div class="row">
-            <div class="col-lg-12 col-sm-12 main_body">
+            <div class="col-12 main_body">
 
             <!--Left side of main body-->
             <div class="row">
-                <div class="col-lg-6 col-sm-12" id="left_body">
+                <div class="col-lg-6 col-md-12" id="left_body">
                     <div class="col-12" id="playdata"></div>
                     <div class="col-12" id="img_container"></div>
                 </div> 
 
                 <!--Right side of main body-->
-                <div class="col-lg-6 col-sm-12 right_body">
+                <div class="col-lg-6 col-md-12 right_body">
                     <div class="col-12" id="hint_container"></div>
                     <div class="col-12" id="word_container"></div>
                     <div class="col-12" id="letters_container"></div>
