--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <div class="container-fluid">
         
-        <!--App Name & Navigation-->
+        <!--App Name & Navigation bar-->
         <div class="row">
             <div class="col-lg-6" id="appName_container"></div>
             <div class="col-lg-6" id="navbar"></div>
@@ -82,11 +82,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase.js"></script>
-    <script src="js/firebase.js"></script>
-    <script src="js/toastr.js"></script>
-    <script src="js/string.js"></script>
-    <script src="js/model.js"></script>
-    <script src="js/view.js"></script>
-    <script src="js/controller.js"></script>
+    <script src="js/model/firebase.js"></script>
+    <script src="js/model/string.js"></script>
+    <script src="js/model/model.js"></script>
+    <script src="js/view/toastr.js"></script>
+    <script src="js/view/view.js"></script>
+    <script src="js/controller/controller.js"></script>
 </body>
 </html>
