clean up code, fixed all bugs discovered so far

--- a/rank.html
+++ b/rank.html
@@ -17,7 +17,7 @@
 <link href="https://fonts.googleapis.com/css?family=Mali" rel="stylesheet">
 
 </head>
-<body>
+<body onload="rankInit()">
     <div class="container-fluid">
         
         <!--App Name & Navigation-->
