--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!--Balloon.CSS-->
 <link rel="stylesheet" href="css/balloon.css">
 </head>
-<body>
+<body onload="gameInit()">
     <div class="container-fluid">
         
         <!--App Name & Navigation bar-->
